[tool.poetry]
name = "JamzBot"
version = "1.2.0"
description = "A quick Discord bot for playing music via YouTube!"
authors = ["Jordan Rudman <jrud25@vt.edu>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.0.3"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"